--- a/app/src/main/res/drawable/review_edittext.xml
+++ b/app/src/main/res/drawable/review_edittext.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="#000000" />
-        </shape>
-
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_checked="false">
+            <shape android:shape="rectangle">
+                <solid android:color="@color/white"/>
+                <stroke android:color="@color/gray" android:width="0.5dp"/>
+                <corners android:radius="9dp"/>
+            </shape>
     </item>
-
-    <item android:top = "1dp"
-        android:right= "1dp"
-        android:left="1dp"
-        android:bottom="1dp">
-
+    <item android:state_checked="true">
         <shape android:shape="rectangle">
-            <solid android:color="#ffffff" />
+            <solid android:color="@color/white"/>
+            <stroke android:color="@color/black" android:width="0.5dp"/>
+            <corners android:radius="9dp"/>
         </shape>
-
     </item>
-</layer-list>
+</selector>
