--- a/app/src/main/res/layout/home_posting.xml
+++ b/app/src/main/res/layout/home_posting.xml
@@ -229,7 +229,7 @@
         android:textColor="@color/black"
         android:textSize="15sp"
         android:gravity="top"
-        android:padding="18sp"
+        android:padding="18dp"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="12dp"
