--- a/app/src/main/res/layout/mypage_interest_item.xml
+++ b/app/src/main/res/layout/mypage_interest_item.xml
@@ -8,79 +8,61 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image"
-        android:layout_width="60sp"
-        android:layout_height="60sp"
+        android:layout_width="63dp"
+        android:layout_height="63dp"
+        android:layout_margin="24dp"
         android:src="@drawable/bedge_icon"
-        app:civ_border_width="2dp"
-        app:civ_border_color="#FFFFFF"
-        android:layout_marginLeft="10sp"
-        android:layout_marginTop="10sp"
-        android:layout_marginBottom="10sp"
-        android:layout_gravity="center"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
 
     <TextView
-        android:id="@+id/tv_name"
+        android:id="@+id/textName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="도구리"
+        android:text="닉네임"
         android:textStyle="bold"
         android:textColor="@color/black"
-        android:textSize="18sp"
-        android:layout_marginTop="10sp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="15sp"
+        app:layout_constraintTop_toTopOf="@id/profile_image"
         app:layout_constraintLeft_toRightOf="@id/profile_image"
-        android:layout_marginLeft="10sp"
-        />
+        android:layout_marginLeft="24dp" />
 
     <TextView
         android:id="@+id/upload_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="9dp"
         android:text="24분 전"
         android:textColor="@color/dark_gray"
-        android:textSize="12sp"
-        android:layout_marginTop="5sp"
-        app:layout_constraintTop_toBottomOf="@id/tv_name"
-        app:layout_constraintLeft_toRightOf="@id/profile_image"
-        android:layout_marginLeft="10sp"
-        />
+        android:textSize="15sp"
+        app:layout_constraintTop_toTopOf="@id/textName"
+        app:layout_constraintLeft_toRightOf="@id/textName" />
 
-
-    <ImageButton
-        android:id="@+id/more_btn"
-        android:layout_marginTop="20sp"
-        android:layout_marginRight="20sp"
-        android:layout_width="40sp"
-        android:layout_height="40sp"
-        android:background="@drawable/icon_more"
+    <ImageView
+        android:id="@+id/moreBtn"
+        android:src="@drawable/icon_more"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_margin="24dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        />
-
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30sp"
         android:ellipsize="end"
         android:maxLines="3"
         android:text="오늘 저녁 7시 XX스크린 골프장에서 같이 하실 있으시면 채팅 주세요~~"
         android:textColor="@color/black"
         android:textSize="12sp"
         android:inputType="textMultiLine"
-        app:layout_constraintRight_toLeftOf="@id/more_btn"
-        app:layout_constraintLeft_toLeftOf="@id/tv_name"
+        app:layout_constraintRight_toRightOf="@id/moreBtn"
+        app:layout_constraintLeft_toLeftOf="@id/textName"
         app:layout_constraintTop_toBottomOf="@id/upload_time"
-        android:layout_gravity="start"
-        android:gravity="start"
         android:scrollHorizontally="false"
-        android:scrollbars="vertical"
-        />
+        android:scrollbars="vertical" />
 
 
     <View
