--- a/app/src/main/res/layout/mypage_review_image.xml
+++ b/app/src/main/res/layout/mypage_review_image.xml
@@ -3,35 +3,37 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="90dp"
-    android:layout_height="90dp">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraint"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginRight="12dp"
+        android:background="@drawable/mypage_review_img">
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:elevation="0dp"
-            app:cardCornerRadius="10dp">
+        <ImageView
+            android:id="@+id/iconPlus"
+            android:src="@drawable/icon_plus"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            app:layout_constraintTop_toTopOf="@id/constraint"
+            app:layout_constraintLeft_toLeftOf="@id/constraint"
+            app:layout_constraintRight_toRightOf="@id/constraint"
+            app:layout_constraintBottom_toBottomOf="@id/constraint"/>
 
-            <ImageView
-                android:id="@+id/iv_image"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:scaleType="centerCrop"
-                tools:src="@drawable/camera"/>
-
-        </androidx.cardview.widget.CardView>
-
-    </LinearLayout>
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:src="@drawable/ic_cancel" />
+        <ImageView
+            android:id="@+id/iconCancel"
+            android:visibility="gone"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:foreground="@drawable/icon_close_review"
+            android:foregroundGravity="center"
+            android:foregroundTint="@color/white"
+            android:background="@drawable/mypage_review_img_cancel"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
