--- a/app/src/main/res/layout/chatting_detail.xml
+++ b/app/src/main/res/layout/chatting_detail.xml
@@ -11,6 +11,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" >
 
+
         <TextView
             android:id="@+id/textView"
             android:text="닉네임"
@@ -23,6 +24,85 @@
             android:layout_gravity="center_horizontal"/>
     </androidx.appcompat.widget.Toolbar>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/light_gray"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:id="@+id/top"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/recyclerViewChat">
+
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_margin="20dp"
+            android:id="@+id/sportsImg"
+            android:background="@mipmap/ic_launcher_round"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="@id/top"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:id="@+id/ing"
+            android:text="대결중"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:textColor="@color/black"
+            android:layout_marginLeft="20dp"
+            app:layout_constraintLeft_toRightOf="@id/sportsImg"
+            app:layout_constraintTop_toTopOf="@id/sportsImg"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:id="@+id/title"
+            android:text="제목"
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:layout_marginLeft="10dp"
+            app:layout_constraintLeft_toRightOf="@+id/ing"
+            app:layout_constraintBottom_toBottomOf="@id/ing"
+            app:layout_constraintTop_toTopOf="@id/ing"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:id="@+id/pin"
+            android:src="@drawable/icon_pin2"
+            android:layout_marginLeft="25dp"
+            app:layout_constraintLeft_toRightOf="@id/sportsImg"
+            app:layout_constraintBottom_toBottomOf="@id/sportsImg"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="장소"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:layout_marginLeft="10dp"
+            app:layout_constraintLeft_toRightOf="@id/pin"
+            app:layout_constraintTop_toTopOf="@id/pin"
+            app:layout_constraintBottom_toBottomOf="@id/pin"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/light_gray"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/recyclerViewChat"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewChat"
         android:listSelector="#00000000"
@@ -31,7 +111,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:transcriptMode="alwaysScroll"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintTop_toBottomOf="@id/top"
         app:layout_constraintBottom_toTopOf="@id/editText"/>
 
     <EditText
