--- a/app/src/main/res/layout/login_signup2.xml
+++ b/app/src/main/res/layout/login_signup2.xml
@@ -31,7 +31,7 @@
         android:textColor="@color/navy"
         />
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile"
         android:layout_width="100sp"
         android:layout_height="100sp"
