--- a/app/src/main/res/layout/mypage_profile_edit.xml
+++ b/app/src/main/res/layout/mypage_profile_edit.xml
@@ -43,7 +43,7 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"/>
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imglogo"
         android:layout_width="100sp"
         android:layout_height="100sp"
