--- a/app/src/main/res/layout/mypage_profile_edit.xml
+++ b/app/src/main/res/layout/mypage_profile_edit.xml
@@ -93,6 +93,7 @@
             app:layout_constraintRight_toRightOf="@id/guidelineRight"/>
 
     <Button
+        android:id="@+id/btn_set"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="설정 완료"
