--- a/app/src/main/res/drawable/radiobtn_category_custom.xml
+++ b/app/src/main/res/drawable/radiobtn_category_custom.xml
@@ -10,7 +10,7 @@
     </item>
     <item android:state_checked="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/white"/>
+            <solid android:color="@color/navy"/>
             <corners android:radius="24dp"/>
             <stroke android:width="1dp" android:color="@color/gray"/>
             <padding android:top="9dp" android:bottom="9dp" android:left="18dp" android:right="18dp"/>
