--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -41,7 +41,7 @@
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="팀"/>
+            android:text="단체"/>
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
