--- a/app/src/main/res/layout/home_category.xml
+++ b/app/src/main/res/layout/home_category.xml
@@ -23,7 +23,7 @@
 
     <TextView
         android:id="@+id/textView1"
-        android:text="개인 종목"
+        android:text="개인종목"
         android:textColor="@color/black"
         android:textSize="18sp"
         android:layout_width="wrap_content"
@@ -43,7 +43,7 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:text="팀 종목"
+        android:text="단체종목"
         android:textColor="@color/black"
         android:textSize="18sp"
         android:layout_width="wrap_content"
