--- a/app/src/main/res/layout/login_main.xml
+++ b/app/src/main/res/layout/login_main.xml
@@ -5,13 +5,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineTop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.05"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.05"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineRight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.95"/>
+
     <ImageView
         android:id="@+id/imgView"
         android:src="@drawable/logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120sp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/guidelineTop"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
@@ -43,77 +63,55 @@
         android:textColor="@color/navy"
         />
 
-    <LinearLayout
-        android:layout_width="300sp"
-        android:layout_height="45sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title_sub"
-        android:layout_marginTop="110sp"
-        android:gravity="left"
-        android:background="@drawable/edittext_custom"
-        android:id="@+id/layout1"
-        >
         <EditText
             android:id="@+id/loginId"
-            android:layout_width="wrap_content"
+            android:background="@drawable/edittext_custom"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="아이디 입력"
-            android:layout_marginLeft="10sp"
-            android:background="@null"
+            android:padding="15dp"
             android:layout_gravity="center"
-            />
-    </LinearLayout>
+            android:layout_marginTop="24dp"
+            android:hint="아이디 입력"
+            app:layout_constraintTop_toBottomOf="@+id/imgView"
+            app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
+            app:layout_constraintRight_toRightOf="@id/guidelineRight"/>
 
-    <LinearLayout
-        android:layout_width="300sp"
-        android:layout_height="45sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/layout1"
-        android:layout_marginTop="20sp"
-        android:gravity="left"
-        android:background="@drawable/edittext_custom"
-        android:id="@+id/layout2"
-        >
         <EditText
-            android:background="@null"
             android:id="@+id/loginPw"
-            android:layout_width="wrap_content"
+            android:background="@drawable/edittext_custom"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:padding="15dp"
             android:hint="비밀번호 입력"
             android:inputType="textPassword"
-            android:layout_marginLeft="10sp"
+            android:layout_marginTop="12dp"
             android:layout_gravity="center_vertical"
-            />
-    </LinearLayout>
+            app:layout_constraintTop_toBottomOf="@+id/loginId"
+            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
+            app:layout_constraintRight_toRightOf="@id/guidelineRight"/>
 
     <CheckBox
         android:id="@+id/check_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5sp"
+        android:layout_marginTop="12dp"
         android:text="자동 로그인 "
-        app:layout_constraintLeft_toLeftOf="@id/layout2"
-        app:layout_constraintTop_toBottomOf="@+id/layout2"
+        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
+        app:layout_constraintTop_toBottomOf="@+id/loginPw"
         android:textSize="15sp"
-        android:scaleX="0.8"
-        android:scaleY="0.8"
-        android:layout_marginLeft="-15sp"
-        />
+        android:layout_marginLeft="-8dp" />
 
     <Button
         android:id="@+id/login_button"
-        android:layout_width="300sp"
-        android:layout_height="40sp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
         android:background="@drawable/loginbutton_custom"
         android:text="로그인"
         android:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@id/check_login"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="5sp"
-        />
+        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
+        app:layout_constraintRight_toRightOf="@id/guidelineRight" />
 
     <LinearLayout
         android:id="@+id/layout3"
@@ -122,8 +120,7 @@
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@id/login_button"
-        android:layout_marginTop="15sp"
-        >
+        android:layout_marginTop="24sp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -153,32 +150,25 @@
             />
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/layout4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/layout3"
-        android:layout_marginTop="25sp">
-
         <View
             android:id="@+id/view1"
             android:background="@color/navy"
             android:layout_width="120dp"
             android:layout_height="1dp"
-            app:layout_constraintTop_toBottomOf="@id/layout3"
+            app:layout_constraintTop_toTopOf="@id/text"
             app:layout_constraintRight_toLeftOf="@+id/text"
-            app:layout_constraintLeft_toLeftOf="parent"/>
+            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
+            app:layout_constraintBottom_toBottomOf="@id/text"/>
 
         <TextView
             android:id="@+id/text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:layout_marginTop="48dp"
+            app:layout_constraintTop_toBottomOf="@+id/layout3"
             app:layout_constraintLeft_toRightOf="@+id/view1"
             app:layout_constraintRight_toLeftOf="@id/view2"
-            app:layout_constraintTop_toBottomOf="@+id/layout3"
             android:text="   SNS 로그인   " />
 
         <View
@@ -186,34 +176,31 @@
             android:background="@color/navy"
             android:layout_width="120dp"
             android:layout_height="1dp"
-            app:layout_constraintTop_toBottomOf="@id/layout3"
+            app:layout_constraintTop_toTopOf="@id/text"
             app:layout_constraintLeft_toRightOf="@id/text"
-            app:layout_constraintRight_toRightOf="parent"/>
+            app:layout_constraintRight_toRightOf="@id/guidelineRight"
+            app:layout_constraintBottom_toBottomOf="@id/text"/>
 
-    </LinearLayout>
+    <ImageButton
+        android:id="@+id/kakao_Login"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@drawable/kakaologo"
+        android:layout_marginTop="48dp"
+        android:layout_marginRight="30dp"
+        app:layout_constraintTop_toBottomOf="@+id/text"
+        app:layout_constraintLeft_toRightOf="@+id/view1"
+        app:layout_constraintRight_toLeftOf="@+id/naver_Login" />
 
-    <LinearLayout
-        android:id="@+id/layout5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/layout4"
-        android:layout_marginTop="25sp"
-        >
-        <ImageButton
-            android:id="@+id/kakao_Login"
-            android:layout_width="54sp"
-            android:layout_height="54sp"
-            android:background="@drawable/kakaologo"
-            android:layout_marginRight="50sp"/>
-
-        <com.navercorp.nid.oauth.view.NidOAuthLoginButton
-            android:id="@+id/naver_Login"
-            android:layout_width="54sp"
-            android:layout_height="54sp"
-             />
-    </LinearLayout>
+    <com.navercorp.nid.oauth.view.NidOAuthLoginButton
+        android:id="@+id/naver_Login"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginLeft="30dp"
+        app:layout_constraintTop_toBottomOf="@+id/text"
+        app:layout_constraintRight_toLeftOf="@+id/view2"
+        app:layout_constraintLeft_toRightOf="@+id/kakao_Login" />
 
 
 
