--- a/app/src/main/res/layout/mypage_interest.xml
+++ b/app/src/main/res/layout/mypage_interest.xml
@@ -15,36 +15,45 @@
 
     <RadioGroup
         android:id="@+id/match_Group"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginLeft="20sp">
+        android:layout_marginLeft="20dp">
 
         <RadioButton
             android:id="@+id/all_btn"
+            android:text="전체"
+            android:textColor="@color/dark_gray"
             android:layout_width="50dp"
             android:layout_height="34dp"
+            android:gravity="center"
             android:checked="true"
-            android:layout_marginRight="10sp"
-            android:background="@drawable/radiocheck_custom_mypage1"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/mypage_radiocheck_custom"
             android:button="@null" />
 
         <RadioButton
             android:id="@+id/personal_btn"
+            android:text="개인종목"
+            android:textColor="@color/dark_gray"
             android:layout_width="79dp"
             android:layout_height="34dp"
-            android:layout_marginRight="10sp"
+            android:layout_marginRight="10dp"
             android:button="@null"
-            android:background="@drawable/radiocheck_custom_mypage2" />
+            android:background="@drawable/mypage_radiocheck_custom" />
 
         <RadioButton
             android:id="@+id/team_btn"
+            android:text="단체종목"
+            android:textColor="@color/dark_gray"
             android:layout_width="79dp"
             android:layout_height="34dp"
             android:button="@null"
             android:layout_marginRight="10sp"
-            android:background="@drawable/radiocheck_custom_mypage3" />
+            android:background="@drawable/mypage_radiocheck_custom" />
 
     </RadioGroup>
 
