--- a/app/src/main/res/layout/mypage_review.xml
+++ b/app/src/main/res/layout/mypage_review.xml
@@ -104,6 +104,68 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"/>
 
+            <TextView
+                android:id="@+id/textQuestion1"
+                android:text="대결 결과를 알려주세요!"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                app:layout_constraintTop_toBottomOf="@+id/nickName"
+                app:layout_constraintLeft_toLeftOf="@id/innerGuideLeft"
+                app:layout_constraintRight_toRightOf="@id/innerGuideRight"/>
+
+            <!--TODO: 대결결과-->
+            <RadioGroup
+                android:id="@+id/resultRadioGroup"
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                app:layout_constraintTop_toBottomOf="@+id/textQuestion1"
+                app:layout_constraintLeft_toLeftOf="@+id/innerGuideLeft"
+                app:layout_constraintRight_toRightOf="@id/innerGuideRight">
+
+                <RadioButton
+                    android:id="@+id/winBtn"
+                    android:text="승"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:gravity="center"
+                    android:layout_marginRight="24dp"
+                    android:button="@null"
+                    android:checked="true"
+                    android:background="@drawable/mypage_review_radiobtn_bg"/>
+
+                <RadioButton
+                    android:id="@+id/sameBtn"
+                    android:text="무"
+                    android:textColor="@color/dark_gray"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:gravity="center"
+                    android:layout_marginRight="24dp"
+                    android:button="@null"
+                    android:background="@drawable/mypage_review_radiobtn_bg" />
+
+                <RadioButton
+                    android:id="@+id/loseBtn"
+                    android:text="패"
+                    android:textColor="@color/dark_gray"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:gravity="center"
+                    android:button="@null"
+                    android:background="@drawable/mypage_review_radiobtn_bg" />
+            </RadioGroup>
+
             <EditText
                 android:id="@+id/editReview"
                 android:textSize="15sp"
@@ -113,8 +175,8 @@
                 android:padding="18dp"
                 android:gravity="top"
                 android:background="@drawable/review_edittext"
-                android:layout_marginTop="24dp"
-                app:layout_constraintTop_toBottomOf="@id/nickName"
+                android:layout_marginTop="48dp"
+                app:layout_constraintTop_toBottomOf="@id/resultRadioGroup"
                 app:layout_constraintLeft_toLeftOf="@id/innerGuideLeft"
                 app:layout_constraintRight_toRightOf="@id/innerGuideRight"
                 android:hint="솔직담백한 대결 경험을 적어주세요! \n남겨주신 대결 후기는 상대방의 프로필에 공개돼요." />
@@ -153,7 +215,7 @@
                 app:layout_constraintRight_toRightOf="@id/innerGuideRight"/>
 
             <TextView
-                android:id="@+id/text"
+                android:id="@+id/textQuestion2"
                 android:text="다음에도 이 분과 대결하고 싶으신가요?"
                 android:textColor="@color/black"
                 android:textSize="15sp"
@@ -171,7 +233,7 @@
             android:textSize="10sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/text"
+            app:layout_constraintTop_toBottomOf="@+id/textQuestion2"
             app:layout_constraintLeft_toLeftOf="@id/innerGuideLeft"
             app:layout_constraintRight_toRightOf="@id/innerGuideRight"/>
 
