--- a/app/src/main/res/drawable/mypage_radiocheck_custom.xml
+++ b/app/src/main/res/drawable/mypage_radiocheck_custom.xml
@@ -4,16 +4,18 @@
         <shape android:shape="rectangle">
             <solid android:color="@color/light_gray"/>
             <corners android:radius="24dp"/>
+            <padding android:left="20dp" android:right="20dp"
+                android:top="12dp" android:bottom="12dp"/>
             <stroke android:width="1dp" android:color="@color/light_gray"/>
-            <padding android:top="15dp" android:bottom="15dp" android:left="21dp" android:right="21dp"/>
         </shape>
     </item>
     <item android:state_checked="true">
         <shape android:shape="rectangle">
             <solid android:color="@color/navy"/>
             <corners android:radius="24dp"/>
+            <padding android:left="20dp" android:right="20dp"
+                android:top="12dp" android:bottom="12dp"/>
             <stroke android:width="1dp" android:color="@color/navy"/>
-            <padding android:top="15dp" android:bottom="15dp" android:left="21dp" android:right="21dp"/>
         </shape>
     </item>
 </selector>
