--- a/app/src/main/res/layout/home_recyclerview_item.xml
+++ b/app/src/main/res/layout/home_recyclerview_item.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/img_profile"
         android:src="@mipmap/ic_launcher"
         android:layout_width="63dp"
