로그인 구현

--- a/app/src/main/res/layout/home_recyclerview_item.xml
+++ b/app/src/main/res/layout/home_recyclerview_item.xml
@@ -60,7 +60,7 @@
     <TextView
         android:id="@+id/text_like"
         android:textStyle="bold"
-        android:text="0"
+        android:text=""
         android:textColor="@color/black"
         android:textSize="15sp"
         android:layout_width="wrap_content"
