--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="blue">#0E25A1</color>
     <color name="graphite">#242425</color>
     <color name="red">#CF1C0E</color>
+    <color name="pink2">#E91E63</color>
 
     <color name="colorPrimaryDark">#ffffff</color>
     <color name="colorAccent">#ffffff</color>
