프로필 이름이 바껴도 갱신 잘됨

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,7 +15,7 @@
 
         <TextView
             android:id="@+id/textView"
-            android:text="동네 이름"
+            android:text=""
             android:textColor="@color/black"
             android:textSize="21sp"
             android:layout_width="wrap_content"
