--- a/app/src/main/res/layout/home_posting_detail.xml
+++ b/app/src/main/res/layout/home_posting_detail.xml
@@ -1,8 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imgProfile"
+        android:src="@mipmap/ic_launcher"
+        android:layout_width="63dp"
+        android:layout_height="63dp"
+        android:layout_margin="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintLeft_toLeftOf="@id/toolbar"/>
+
+    <TextView
+        android:id="@+id/textName"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        android:text="아이디"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="12dp"
+        app:layout_constraintTop_toTopOf="@id/imgProfile"
+        app:layout_constraintLeft_toRightOf="@+id/imgProfile"
+        app:layout_constraintBottom_toBottomOf="@+id/imgProfile"/>
+
+    <TextView
+        android:id="@+id/textContent"
+        android:text="게시글 내용"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/imgProfile"
+        app:layout_constraintLeft_toLeftOf="@+id/imgProfile"
+        app:layout_constraintRight_toRightOf="@+id/more"/>
+
+    <TextView
+        android:id="@+id/textTime"
+        android:text="2023.09.18"
+        android:textColor="@color/dark_gray"
+        android:textSize="15sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/imgLike"
+        app:layout_constraintLeft_toLeftOf="@+id/textContent"
+        app:layout_constraintBottom_toBottomOf="@+id/imgLike"/>
+
+    <ImageView
+        android:id="@+id/more"
+        android:src="@drawable/icon_more"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginRight="24dp"
+        app:layout_constraintTop_toTopOf="@+id/textName"
+        app:layout_constraintRight_toRightOf="@id/toolbar"
+        app:layout_constraintBottom_toBottomOf="@id/textName"/>
+
+    <ImageView
+        android:id="@+id/imgLike"
+        android:src="@drawable/selector_icon_heart"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/textContent"
+        app:layout_constraintRight_toLeftOf="@+id/text_like"/>
+
+    <TextView
+        android:id="@+id/text_like"
+        android:textStyle="bold"
+        android:text="0"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="9dp"
+        app:layout_constraintTop_toTopOf="@+id/imgLike"
+        app:layout_constraintRight_toLeftOf="@+id/imgCategory"
+        app:layout_constraintBottom_toBottomOf="@+id/imgLike"/>
+
+    <ImageView
+        android:id="@+id/imgCategory"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/imgview_category_bg_custom2"
+        app:layout_constraintBottom_toBottomOf="@+id/imgLike"
+        app:layout_constraintRight_toRightOf="@+id/more"
+        app:layout_constraintTop_toTopOf="@+id/imgLike" />
 </androidx.constraintlayout.widget.ConstraintLayout>
