--- a/app/src/main/res/layout/home_recyclerview_item.xml
+++ b/app/src/main/res/layout/home_recyclerview_item.xml
@@ -39,9 +39,11 @@
 
     <TextView
         android:id="@+id/text_content"
+        android:maxLines="3"
+        android:ellipsize="end"
         android:text="게시글 내용"
         android:textColor="@color/black"
-        android:textSize="12sp"
+        android:textSize="15sp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/text_name"
@@ -60,7 +62,7 @@
     <TextView
         android:id="@+id/text_like"
         android:textStyle="bold"
-        android:text=""
+        android:text="0"
         android:textColor="@color/black"
         android:textSize="15sp"
         android:layout_width="wrap_content"
@@ -78,8 +80,6 @@
         app:layout_constraintBottom_toBottomOf="@+id/img_like"
         app:layout_constraintRight_toRightOf="@+id/more"
         app:layout_constraintTop_toTopOf="@+id/img_like" />
-    <!---->
-
 
     <ImageView
         android:id="@+id/more"
