동네이름 갖고옴

--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -19,7 +19,8 @@
             android:layout_gravity="left"
             android:text="동네 랭킹"
             android:textColor="@color/black"
-            android:textSize="21sp" />
+            android:textSize="21sp"
+            tools:ignore="RtlHardcoded" />
     </androidx.appcompat.widget.Toolbar>
 
 
