fragment_ranking에서 본인의 랭킹에 들어있던 텍스트를 id에서 닉네임으로 변경

--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -265,7 +265,7 @@
 
     <TextView
         android:id="@+id/nick_rank"
-        android:text="id"
+        android:text="닉네임"
         android:textColor="@color/black"
         android:textSize="18sp"
         android:layout_width="wrap_content"
