--- a/app/src/main/res/layout/ranking_recyclerview_item.xml
+++ b/app/src/main/res/layout/ranking_recyclerview_item.xml
@@ -32,7 +32,7 @@
         app:layout_constraintGuide_percent=".27"/>
 
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imgView_rank"
         android:src="@mipmap/ic_launcher"
         android:layout_width="54dp"
