--- a/app/src/main/res/layout/login_main.xml
+++ b/app/src/main/res/layout/login_main.xml
@@ -32,8 +32,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="@id/guidelineTop"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="@id/title"
+        app:layout_constraintRight_toRightOf="@id/title"/>
 
     <TextView
         android:id="@+id/title"
@@ -41,14 +41,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="우리동네고수"
-        android:layout_marginTop="30sp"
-        android:textSize="42sp"
+        android:layout_marginTop="30dp"
+        android:textSize="36sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/imgView"
         app:layout_constraintBottom_toBottomOf="@id/imgView"
-        android:textColor="@color/navy"
-        />
+        android:textColor="@color/navy" />
 
     <TextView
         android:id="@+id/title_sub"
@@ -57,14 +56,15 @@
         android:layout_height="wrap_content"
         android:text="우리 집 근처에서 즐길 수 있는 각종 스포츠!"
         android:textSize="14sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/title"
+        app:layout_constraintRight_toRightOf="@id/title"
         app:layout_constraintTop_toBottomOf="@id/title"
         android:textColor="@color/navy"
         />
 
         <EditText
             android:id="@+id/loginId"
+            android:textCursorDrawable="@drawable/login_edittext_cursor"
             android:background="@drawable/edittext_custom"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -78,6 +78,7 @@
 
         <EditText
             android:id="@+id/loginPw"
+            android:textCursorDrawable="@drawable/login_edittext_cursor"
             android:background="@drawable/edittext_custom"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -96,9 +97,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="자동 로그인 "
+        android:textColor="@color/dark_gray"
+        android:textSize="15sp"
         app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
         app:layout_constraintTop_toBottomOf="@+id/loginPw"
-        android:textSize="15sp"
         android:layout_marginLeft="-8dp" />
 
     <Button
@@ -106,6 +108,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
         android:background="@drawable/loginbutton_custom"
         android:text="로그인"
         android:textColor="@color/white"
@@ -126,39 +130,34 @@
             android:layout_height="wrap_content"
             android:id="@+id/findId"
             android:text="아이디 찾기"
-            />
+            android:textColor="@color/gray"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="   I   "
-            />
+            android:textColor="@color/light_gray"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="비밀번호 찾기"
             android:id="@+id/findPw"
-            />
+            android:textColor="@color/gray"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="   I   " />
+            android:text="   I   "
+            android:textColor="@color/light_gray"/>
+
         <TextView
+            android:id="@+id/signUp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="회원가입"
-            android:id="@+id/signUp"
-            />
+            android:textColor="@color/gray" />
     </LinearLayout>
-
-        <View
-            android:id="@+id/view1"
-            android:background="@color/navy"
-            android:layout_width="120dp"
-            android:layout_height="1dp"
-            app:layout_constraintTop_toTopOf="@id/text"
-            app:layout_constraintRight_toLeftOf="@+id/text"
-            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
-            app:layout_constraintBottom_toBottomOf="@id/text"/>
 
         <TextView
             android:id="@+id/text"
@@ -167,19 +166,10 @@
             android:gravity="center"
             android:layout_marginTop="48dp"
             app:layout_constraintTop_toBottomOf="@+id/layout3"
-            app:layout_constraintLeft_toRightOf="@+id/view1"
-            app:layout_constraintRight_toLeftOf="@id/view2"
-            android:text="   SNS 로그인   " />
-
-        <View
-            android:id="@+id/view2"
-            android:background="@color/navy"
-            android:layout_width="120dp"
-            android:layout_height="1dp"
-            app:layout_constraintTop_toTopOf="@id/text"
-            app:layout_constraintLeft_toRightOf="@id/text"
+            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
             app:layout_constraintRight_toRightOf="@id/guidelineRight"
-            app:layout_constraintBottom_toBottomOf="@id/text"/>
+            android:text="또는"
+            android:textColor="@color/gray"/>
 
     <ImageButton
         android:id="@+id/kakao_Login"
@@ -187,9 +177,9 @@
         android:layout_height="70dp"
         android:background="@drawable/kakaologo"
         android:layout_marginTop="48dp"
-        android:layout_marginRight="30dp"
+        android:layout_marginRight="20dp"
         app:layout_constraintTop_toBottomOf="@+id/text"
-        app:layout_constraintLeft_toRightOf="@+id/view1"
+        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
         app:layout_constraintRight_toLeftOf="@+id/naver_Login" />
 
     <com.navercorp.nid.oauth.view.NidOAuthLoginButton
@@ -197,9 +187,9 @@
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_marginTop="48dp"
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="20dp"
         app:layout_constraintTop_toBottomOf="@+id/text"
-        app:layout_constraintRight_toLeftOf="@+id/view2"
+        app:layout_constraintRight_toRightOf="@id/guidelineRight"
         app:layout_constraintLeft_toRightOf="@+id/kakao_Login" />
 
 
