--- a/app/src/main/res/drawable/edittext_custom.xml
+++ b/app/src/main/res/drawable/edittext_custom.xml
@@ -8,7 +8,7 @@
                 android:color="@android:color/transparent"/>
             <stroke
                 android:width="2dp"
-                android:color="@color/gray"/>
+                android:color="@color/light_gray"/>
             <corners
                 android:radius="6dp"/>
         </shape>
