--- a/app/src/main/res/drawable/login_edittext_cursor.xml
+++ b/app/src/main/res/drawable/login_edittext_cursor.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <!-- 일반 상태 (기본 상태) -->
     <item>
         <shape>
-            <solid android:color="@color/navy" />
-            <corners android:radius="24dp"/>
+            <size android:width="2dp"/>
+            <solid android:color="@color/navy"/>
         </shape>
     </item>
 </selector>
