커서 색상 설정완료(최종), 로그인 관련 창 XML 변경 완료

--- a/app/src/main/res/layout/chatting_detail.xml
+++ b/app/src/main/res/layout/chatting_detail.xml
@@ -111,6 +111,7 @@
 
     <EditText
         android:id="@+id/msgEdit"
+        android:textCursorDrawable="@drawable/chatting_detail_edittext_cursor"
         android:elevation="50dp"
         android:hint="메세지를 입력하세요"
         android:inputType="textMultiLine"
