--- a/app/src/main/res/layout/login_findid.xml
+++ b/app/src/main/res/layout/login_findid.xml
@@ -5,13 +5,27 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.1"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineRight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.9"/>
+
     <ImageView
         android:id="@+id/imglogo"
-        android:layout_width="150sp"
-        android:layout_height="150sp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_marginTop="28dp"
         android:src="@drawable/logo"
-        android:layout_marginLeft="10sp"
+        android:layout_marginLeft="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -32,88 +46,62 @@
         android:textColor="@color/navy"
         />
 
-    <LinearLayout
-        android:id="@+id/layout1"
-        android:layout_width="300sp"
-        android:layout_height="40sp"
-        android:gravity="center"
-        android:layout_marginTop="70sp"
-        android:background="@drawable/edittext_custom"
-        app:layout_constraintTop_toBottomOf="@+id/imglogo"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        >
-
 
         <EditText
             android:id="@+id/phone_edit"
-            android:layout_width="300sp"
-            android:layout_height="40sp"
+            android:textCursorDrawable="@drawable/login_edittext_cursor"
+            android:textSize="15sp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:padding="12dp"
+            android:layout_marginTop="70dp"
             android:hint="전화번호를 입력해 주세요."
-            android:layout_marginLeft="10sp"
-            android:background="@null"
-            android:layout_gravity="center"
-            />
-
-
-    </LinearLayout>
+            android:background="@drawable/edittext_custom"
+            app:layout_constraintTop_toBottomOf="@+id/imglogo"
+            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
+            app:layout_constraintRight_toRightOf="@id/guidelineRight"/>
 
     <Button
         android:id="@+id/send_btn"
-        android:layout_width="150sp"
-        android:layout_height="50sp"
-        android:layout_gravity="right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:text="인증번호 받기"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/layout1"
+        app:layout_constraintTop_toBottomOf="@id/phone_edit"
+        app:layout_constraintRight_toRightOf="@id/guidelineRight"
         android:layout_marginTop="20sp"
-        android:layout_marginLeft="150sp"
         android:background="@drawable/loginbutton_custom"
         android:textColor="@color/white"
-        android:textSize="16sp"
-        />
-
-    <LinearLayout
-        android:id="@+id/layout2"
-        android:layout_width="300sp"
-        android:layout_height="40sp"
-        android:gravity="center"
-        android:layout_marginTop="20sp"
-        android:background="@drawable/edittext_custom"
-        app:layout_constraintTop_toBottomOf="@+id/send_btn"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        >
-
+        android:textSize="15sp" />
 
         <EditText
             android:id="@+id/certification_edit"
-            android:layout_width="300sp"
-            android:layout_height="40sp"
-            android:layout_gravity="center"
-            android:background="@null"
-            android:layout_marginLeft="10sp"
-            android:hint="  인증번호를 입력해 주세요." />
-
-
-    </LinearLayout>
+            android:textCursorDrawable="@drawable/login_edittext_cursor"
+            android:textSize="15sp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:padding="12dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/edittext_custom"
+            android:hint="  인증번호를 입력해 주세요."
+            app:layout_constraintTop_toBottomOf="@+id/send_btn"
+            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
+            app:layout_constraintRight_toRightOf="@id/guidelineRight"/>
 
     <Button
         android:id="@+id/certification_btn"
-        android:layout_width="150sp"
-        android:layout_height="50sp"
-        android:layout_gravity="right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:text="인증번호 인증"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/layout2"
-        android:layout_marginTop="20sp"
-        android:layout_marginLeft="150sp"
+        app:layout_constraintTop_toBottomOf="@id/certification_edit"
+        app:layout_constraintRight_toRightOf="@id/guidelineRight"
+        android:layout_marginTop="20dp"
         android:background="@drawable/loginbutton_custom"
         android:textColor="@color/white"
-        android:textSize="16sp"
-        />
+        android:textSize="15sp" />
 
     <!-- 인증 성공시 visible 하면서 아이디를 찾아주게 설계.    -->
     <TextView
@@ -140,6 +128,6 @@
         app:layout_constraintTop_toBottomOf="@id/id_tv"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="80sp" />
+        android:layout_marginTop="80dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
