--- a/app/src/main/res/layout/mypage_profile_edit.xml
+++ b/app/src/main/res/layout/mypage_profile_edit.xml
@@ -82,6 +82,7 @@
 
         <EditText
             android:id="@+id/loginId"
+            android:textCursorDrawable="@drawable/mypage_profile_edittext_cursor"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
